Everything id resposive

--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -168,11 +168,11 @@
           <th>Coupon Code</th>
         </tr>
       </thead>
-      <tbody id="reportTableBody"></tbody>
+      <tbody id="reportTableBody" style="color: #fff;"></tbody>
     </table>
 
     <!-- Report Summary -->
-    <div class="report-summary" id="reportSummary" style="display: none;">
+    <div class="report-summary" id="reportSummary" style="display: none; color: #fff;" >
       <p><strong>Overall Sales Count:</strong> <span id="salesCount">0</span></p>
       <p><strong>Overall Order Amount:</strong> <span id="orderAmount">0.00</span></p>
       <p><strong>Overall Discount:</strong> <span id="discountAmount">0.00</span></p>
