--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -137,7 +137,52 @@
         }
     }
 </style>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000;">
+        <div class="container-fluid">
+            <!-- Mobile Toggle Button (now on left side) -->
+            <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <!-- Brand Logo (moved after toggle button) -->
+            <B><a class="navbar-brand" href="/" style="color: #c4a277;">MAGIC10</a></B>
+
+            <!-- Navbar Content - All right-aligned -->
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/" style="color: #fff;">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shop" style="color: #fff;">SHOP</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about" style="color: #fff;">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact" style="color: #fff;">CONTACT</a>
+                    </li>
+
+                    <!-- Wishlist and Cart Icons -->
+                    <li class="nav-item">
+                        <a href="/wishlist" class="nav-link" style="color: #fff;">
+                            <i class="fas fa-heart"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/cart" class="nav-link" style="color: #fff;">
+                            <i class="fas fa-shopping-bag"></i>
+                        </a>
+                    </li>
+
+                    
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 <div class="success-container">
     <div class="success-box">
         <div class="success-icon">
