--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -278,7 +278,7 @@
             <B><a class="navbar-brand" href="/" style="color: #c4a277;">MAGIC10</a></B>
 
             <!-- Navbar Content - All right-aligned -->
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item">
                         <a class="nav-link" href="/" style="color: #fff;">HOME</a>
